--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-image-viewer",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -15,6 +15,9 @@
   "peerDependencies": {
     "@angular/core": ">= 2.0.0",
     "@angular/common": ">= 2.0.0"
+  },
+  "repository": {
+    "url": "https://github.com/jpilfold/ngx-image-viewer"
   },
   "devDependencies": {
     "@angular/animations": "^5.0.0",
