--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ng-packagr": "^1.6.0",
     "protractor": "~5.1.2",
     "rxjs": "^5.5.2",
+    "ssri": "5.2.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2",
