--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "zone.js": "^0.8.14"
   },
   "dependencies": {
-    "screenfull": "https://github.com/mefayed/screenfullfix.js.git"
+    "screenfull": "^3.3.2"
   }
 }
